src/pages/index.module.scss
html, body {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	font-family: 'Source Sans Pro';
	font-size: 16px;
	font-weight: 400;
}

h1, h2, h3, h4, h5, h6, p {
	margin: 0;
	font-weight: 300;

}

.first-image {
	background-image:  linear-gradient(rgba(76, 71, 119, 0.5), rgba(76, 71, 119, 0.5)), url('../../house_exterior.jpg');
	background-position: center center;
	background-size: cover;
	width: 100%;
	height: 300px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	color: white;

}

.first-card {
	padding: 1rem;
	max-width: 400px;
	text-align: center;
}

.title-card {
	padding: 2rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

}

.title {
	color: white
}

